--- a/css/style.css
+++ b/css/style.css
@@ -13,70 +13,45 @@ a {
     text-decoration: none;
 }
 
-/* 
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/GothamPro-Medium');
-    src: local('Roboto-Regular'), local('Roboto-Regular'),
-        url('../fonts/Roboto-Regular.woff') format('woff'),
-        url('../fonts/Roboto-Regular.woff2') format('woff2');
-    font-weight: 400;
+    font-family: 'PTRootUIWebLight';
+    src:
+        url('../font/PT-Root-UI_Light.woff2') format('woff2'),
+        url('../font/PT-Root-UI_Light.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold');
-    src: local('Roboto Bold'), local('Roboto-Bold'),
-        url('../fonts/Roboto-Bold.woff') format('woff'),
-        url('../fonts/Roboto-Bold.woff2') format('woff2');
-    font-weight: 700;
+    font-family: 'PTRootUIWebRegular';
+    src:
+        url('../font/PT-Root-UI_Regular.woff2') format('woff2'),
+        url('../font/PT-Root-UI_Regular.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'GothamProLight';
-    src: url('../fonts/GothamPro-Light.woff');
-    src: local('Gotham Pro Light'), local('Gotham Pro Light'),
-        url('../fonts/GothamPro-Light.woff.woff') format('woff'),
-        url('../fonts/GothamPro-Light.woff.woff2') format('woff2');
-    font-weight: 300;
+    font-family: 'PTRootUIWebMedium';
+    src:
+        url('../font/PT-Root-UI_Medium.woff2') format('woff2'),
+        url('../font/PT-Root-UI_Medium.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'GothamPro';
-    src: url('../fonts/GothamPro.woff');
-    src: local('Gotham Pro'), local('Gotham Pro'),
-        url('../fonts/GothamPro.woff.woff') format('woff'),
-        url('../fonts/GothamPro.woff.woff2') format('woff2');
-    font-weight: 400;
+    font-family: 'PTRootUIWebBold';
+    src:
+        url('../font/PT-Root-UI_Bold.woff2') format('woff2'),
+        url('../font/PT-Root-UI_Bold.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
-
-@font-face {
-    font-family: 'GothamProMedium';
-    src: url('../fonts/GothamPro-Medium.woff');
-    src: local('Gotham Pro Medium'), local('Gotham Pro Medium'),
-        url('../fonts/GothamPro-Medium.woff') format('woff'),
-        url('../fonts/GothamPro-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'GothamProbold';
-    src: url('../fonts/GothamPro-Bold.woff');
-    src: local('Gotham Pro bold'), local('Gotham Pro bold'),
-        url('../fonts/GothamPro-Bold.woff') format('woff'),
-        url('../fonts/GothamPro-Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-} */
 
 body {
     min-width: 320px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'PTRootUIWebRegular', sans-serif;
     font-weight: 400;
 }
 
@@ -132,13 +107,17 @@ textarea, select {
 
 :root {
     --white-color: #FFFFFF;
-    --black-white: #FFFFFE;
     --black-color: #000000;
-    --big-stone: #17304C;
-    --nile-blue: #1A385A;
-    --ming: #356A90;
-    --casper: #AEC3D3;
-    --gap: 30px;
+    --midnight: #012245;
+    --malibu: #55CBFF;
+    --azure-radiance: #01A4FF;
+    --alto: #D5D5D5;
+    --venice-blue: #04597B;
+    --cerulean: #02ADF2;
+}
+
+.container {
+    max-width: 1625px;
 }
 
 
@@ -146,24 +125,47 @@ textarea, select {
 
 .section__global {
     padding: 60px 0;
-    border-bottom: 1px solid dimgrey;
 }
 
 .heading__global {
-    margin-bottom: 20px;
+    font-family: 'PTRootUIWebBold';
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: var(--midnight);
+    margin-bottom: 40px;
 }
 
 .subtitle__global {
-    margin-bottom: 15px;
+    font-family: 'PTRootUIWebBold';
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.descr__global {
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* header */
 
 .header {
-    position: fixed;
+    position: relative;
     width: 100%;
-    padding: 20px 0;
-    background-color: #AEC3D3;
+    padding: 18px 0;
+    background-color: var(--midnight);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: var(--white-color);
+    box-shadow: 0px 4px 40px 0px var(--malibu);
 }
 
 .header__logo {
@@ -175,106 +177,250 @@ textarea, select {
 }
 
 .nav__item:not(:last-child) {
-    margin-right: 50px;
+    margin-right: 40px;
 }
+
+.subscription-form {
+    position: relative;
+    justify-content: end;
+}
+
+.header__form-label {
+    margin-right: 5px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.header__form-input {
+    width: 270px;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid var(--alto);
+    border-style: inset;
+    outline: none;
+    background: var(--white-color);
+}
+
+.header__form-submit {
+    position: absolute;
+    margin-left: -30px;
+    padding: 9px 25px;
+    border-radius: 10px;
+    background: var(--azure-radiance);
+    border: none;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: var(--white-color);
+    cursor: pointer;
+}
+
+
 
 /* hero  */
 
-.vid_container {
-    position: relative;
-    height: 500px;
-    overflow: hidden;
-    z-index: -1;
+
+.hero {
+    background-image: url(../img/hero__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-#myVideo {
-    position: absolute;
-    width: 100%;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
-}
-
-.hero__container {
-    position: absolute;
-    top: 115px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
 
 .hero__info {
-    padding: 120px 0;
-    text-align: center;
+    padding-top: 127px;
+    padding-bottom: 152px;
 }
 
 
 .hero__heading {
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    border-bottom: 0.5px solid var(--malibu);
+    font-size: 36px;
+    font-style: normal;
+    font-family: 'PTRootUIWebBold';
+    font-weight: 700;
+    line-height: normal;
     color: var(--white-color);
 }
 
 .hero__descr {
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
     color: var(--white-color);
 }
 
 
-
-
 /* about-us */
 
+.about-us__list-item:not(:last-child) {
+    margin-bottom: 5px;
+}
 
+.about-us__list-item {
+    position: relative;
+    padding-right: 25px;
+    margin-bottom: 5px;
+    width: fit-content;
+}
+
+.about-us__list-item::after {
+    content: url('../img/tick.svg');
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.about-us__list-item:hover::after {
+    opacity: 1;
+}
 
 
 /* work-steps */
 
-
 .steps-wrapper {
+    min-height: 300px;
     flex-direction: column;
+    position: relative;
+    padding: 25px 40px;
+    padding-bottom: 50px;
+    border-radius: 16px;
+}
+
+.step1 {
+    background-color: var(--midnight);
+}
+
+.step2 {
+    background-color: var(--venice-blue);
+}
+
+.step3 {
+    background-color: var(--cerulean);
+}
+
+.steps__icon {
+    margin-bottom: 20px;
+}
+
+.steps__subtitle {
+    color: var(--white-color);
+}
+
+.steps__descr {
+    color: var(--white-color);
+
 }
 
 
 
 /* services */
 
+.services__descr {
+    margin-bottom: 25px;
+    width: 35%;
+}
+
 
 
 .accordion {
-    width: 80%;
+    display: inline-block;
+    /* width: 80%; */
+    width: 60%;
     margin: 0 auto;
-  }
-  
-  .accordion-item {
-    border: 1px solid #ccc;
+}
+
+.accordion-item {
+    /* border: 1px solid #ccc; */
     margin-bottom: 10px;
     border-radius: 4px;
-  }
-  
-  .accordion-button {
+}
+
+.accordion-button {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #f5f5f5;
-    border: none;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: var(--black-color);
+    border: 2px solid var(--azure-radiance);
+    border-radius: 16px;
+    background: var(--white-color);
+    outline: none;
     cursor: pointer;
+    /* 
+    background: rgb(1, 34, 69);
+    background: linear-gradient(90deg, rgba(1, 34, 69, 0.9575859837278107) 0%, rgba(4, 89, 123, 0.7445682322485208) 50%, rgba(85, 203, 255, 0.8481185281065089) 100%);
+     */
     width: 100%;
-  }
-  
-  .arrow {
+}
+
+.arrow {
     transition: transform 0.3s ease-in-out;
-  }
-  
-  .accordion-panel {
+}
+
+.accordion-panel {
     display: none;
     padding: 10px;
     background-color: #fff;
-  }
+}
 
-  /* learn-more */
+.panel__descr {
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.panel__item {
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
-  /* footer */
+/* learn-more */
 
-  .footer__address {
+.learn-more__wrapper {
+    min-height: 180px;
+    display: flex;
     flex-direction: column;
-  }
+    align-items: baseline;
+}
+
+.learn__descr {
+    margin-bottom: auto;
+}
+
+.learn__btn {
+    padding: 19px 50px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    color: var(--white-color);
+    border-radius: 16px;
+    background-color: var(--azure-radiance);
+}
+
+
+/* footer */
+
+.footer__address {
+    flex-direction: column;
+}
