--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ textarea, select {
 }
 
 .heading__global {
-    font-family: 'PTRootUIWebBold';
+    font-family: 'PTRootUIWebBold', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -138,7 +138,7 @@ textarea, select {
 }
 
 .subtitle__global {
-    font-family: 'PTRootUIWebBold';
+    font-family: 'PTRootUIWebBold', sans-serif;
     margin-bottom: 20px;
     font-size: 20px;
     font-style: normal;
@@ -242,7 +242,7 @@ textarea, select {
     border-bottom: 0.5px solid var(--malibu);
     font-size: 36px;
     font-style: normal;
-    font-family: 'PTRootUIWebBold';
+    font-family: 'PTRootUIWebBold', sans-serif;
     font-weight: 700;
     line-height: normal;
     color: var(--white-color);
