--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,32 @@ textarea, select {
     opacity: 1;
 }
 
+.calendly-container {
+    padding: 50px 0 100px 50px;
+    background-image: url(../img/calendly-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+}
+
+.calendly__subtitle {
+    color: var(--white-color);
+    margin-bottom: 60px;
+
+}
+
+.calendly__link {
+    padding: 19px 30px;
+    background-color: var(--azure-radiance);
+    border-radius: 16px;
+    color: var(--white-color);
+    font-family: 'PTRootUIWebBold', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 
 /* work-steps */
 
@@ -359,10 +385,6 @@ textarea, select {
     background: var(--white-color);
     outline: none;
     cursor: pointer;
-    /* 
-    background: rgb(1, 34, 69);
-    background: linear-gradient(90deg, rgba(1, 34, 69, 0.9575859837278107) 0%, rgba(4, 89, 123, 0.7445682322485208) 50%, rgba(85, 203, 255, 0.8481185281065089) 100%);
-     */
     width: 100%;
 }
 
@@ -420,6 +442,59 @@ textarea, select {
 
 /* footer */
 
+.footer {
+    padding-top: 35px;
+    padding-bottom: 70px;
+    background-image: url(../img/footer__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.logo-wrapper {
+    margin-bottom: 50px;
+}
+
+.footer__descr:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.address__descr {
+    margin-bottom: 15px;
+}
+
+.address__link:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.footer__item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.footer__descr {
+    font-family: 'PTRootUIWebBold', sans-serif;
+    color: var(--white-color);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 .footer__address {
     flex-direction: column;
+    font-family: 'PTRootUIWebBold', sans-serif;
+    color: var(--white-color);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer__list {
+    text-align: end;
+    font-family: 'PTRootUIWebBold', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: var(--white-color);
 }
