--- a/css/media.css
+++ b/css/media.css
@@ -9,7 +9,6 @@
   --cerulean: #02ADF2;
   --black-pearl: #040B1F;
   --blue-ribbon: #016FFF;
-
 }
 
 
@@ -22,6 +21,25 @@
 
   .btn:hover:not(:active) {
     background-color: var(--malibu);
+  }
+
+  .burger:hover .burger__line {
+    background-color: var(--malibu);
+  }
+
+  .subscription-link__header:hover {
+    border-color: var(--malibu);
+    color: var(--malibu);
+  }
+
+  .subscription-link__header-nav:hover {
+    border-color: var(--malibu);
+    color: var(--malibu);
+  }
+
+  .subscribe__link:hover {
+    border-color: var(--malibu);
+    color: var(--malibu);
   }
 
   .accordion-button:hover:not(:active) {
@@ -43,10 +61,250 @@
 
 }
 
-@media (max-width: 1810px) {
+@media (max-width: 1467px) {
 
-  .header__form-submit {
-    margin-left: -23%;
+  .steps-wrapper {
+    min-height: 312px;
+  }
+
+}
+
+@media (max-width: 1398px) {
+
+  .header__content {
+    justify-content: end;
+  }
+
+  .subscription-link__header {
+    margin-right: 30px;
+  }
+
+  .header__nav-list {
+    position: fixed;
+    right: 0;
+    top: 0;
+    flex-direction: column;
+    min-width: 400px;
+    height: 100%;
+    z-index: 10;
+    padding: 50px;
+    padding-right: 150px;
+    box-shadow: 0 0 5px #888;
+    background-color: var(--midnight);
+    overflow-y: auto;
+    visibility: hidden;
+    transform: translateX(100%);
+    transition: visibility 0.3s ease-in-out, transform 0.3s ease-in-out;
+    box-shadow: 0px 4px 40px 0px var(--malibu);
+    /* border-radius: 0px 0px 32px 32px; */
+  }
+
+  .header__nav-list .header__nav-list {
+    flex-direction: column;
+  }
+
+  .header__nav-list .nav__item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 50px;
+  }
+
+  .header__nav-list--active {
+    visibility: visible;
+    transform: none;
+  }
+
+  .burger {
+    position: relative;
+    display: block;
+    margin-left: 0;
+    margin-right: 3%;
+    padding-top: 30px;
+    width: 30px;
+    border-radius: 3px;
+    color: var(--white-color);
+    z-index: 11;
+  }
+
+  .burger__line {
+    position: absolute;
+    left: 50%;
+    width: 30px;
+    height: 3px;
+    border-radius: inherit;
+    background-color: var(--white-color);
+    transform: translateX(-50%);
+    transition: background-color 0.3s ease-in-out;
+  }
+
+  .burger__line:nth-child(1) {
+    top: 0px;
+  }
+
+  .burger__line:nth-child(3) {
+    bottom: 0px;
+  }
+
+  .burger__line:nth-child(2) {
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+  .burger--active .burger__line:nth-child(2) {
+    opacity: 0;
+  }
+
+  .burger--active .burger__line:first-child {
+    left: 25%;
+    top: 50%;
+    transform: rotate(45deg);
+    transform-origin: center;
+    transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out;
+  }
+
+  .burger--active .burger__line:last-child {
+    bottom: auto;
+    left: 25%;
+    top: 50%;
+    transform: rotate(-45deg);
+    transform-origin: center;
+    transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out;
+  }
+
+  .swiper__content {
+    padding: 40px 30px;
+  }
+
+  .steps-wrapper {
+    min-height: 394px;
+  }
+
+  .learn-more__wrapper {
+    width: 88%;
+  }
+
+}
+
+@media (max-width: 1147px) {
+
+  .heading__global {
+    font-size: 30px;
+  }
+
+  .learn-more__wrapper {
+    min-height: 300px;
+  }
+
+}
+
+@media (max-width: 991px) {
+
+  .about-us__list {
+    margin-bottom: 50px;
+  }
+
+  .calendly-container {
+    width: 70%;
+  }
+
+  .steps-wrapper {
+    min-height: 280px;
+    margin-bottom: 50px;
+  }
+
+  .step3 {
+    margin-bottom: 0px;
+  }
+
+  .services__descr {
+    width: 100%;
+  }
+
+  .accordion {
+    width: 100%;
+  }
+
+  .learn-more__wrapper {
+    min-height: 250px;
+    width: 45%;
+    margin-bottom: 50px;
+  }
+
+  .learn-more__wrapper-3 {
+    margin-bottom: 0;
+  }
+
+  .subscribe__heading {
+    text-align: start;
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  .header {
+    font-size: 14px;
+  }
+
+  .hero__heading {
+    font-size: 30px;
+  }
+
+  .hero__descr {
+    font-size: 14px;
+  }
+
+  .heading__global {
+    font-size: 28px;
+  }
+
+  .subtitle__global {
+    font-size: 18px;
+  }
+
+  .descr__global {
+    font-size: 14px;
+  }
+
+  .calendly__link {
+    font-size: 16px;
+  }
+
+  .swiper__section-link {
+    font-size: 16px;
+  }
+
+  .swiper__link {
+    font-size: 16px;
+  }
+
+  .learn-more__wrapper {
+    width: 55%;
+  }
+
+  @media (max-width: 630px) {
+
+    .subscription-link__header {
+      display: none;
+    }
+
+    .subscription-link__header-nav {
+      display: block;
+      padding: 10px 15px;
+      border: 1px solid var(--white-color);
+      border-radius: 16px;
+      outline: none;
+      transition: border-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    }
+
+    .subscription-link__heade-nav:focus-visible {
+      border-color: var(--blue-ribbon);
+      color: var(--blue-ribbon);
+    }
+
+    .subscription-link__header-nav:active {
+      border-color: var(--blue-ribbon);
+      color: var(--blue-ribbon);
+    }
 
   }
 
