--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,7 @@ textarea, select {
 }
 
 .calendly-container {
+    width: 75%;
     padding: 50px 0 100px 50px;
     background-image: url(../img/calendly-bg.png);
     background-repeat: no-repeat;
