--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ a {
 
 body {
     min-width: 320px;
-    font-family: 'PTRootUIWebRegular', sans-serif;
+    font-family: 'PTRootUIWebRegular', 'PT Root UI', sans-serif;
     font-weight: 400;
 }
 
