--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ textarea, select {
     background-image: url(../img/hero__background.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     background-color: var(--black-pearl);
 }
 
@@ -734,6 +735,10 @@ textarea, select {
 
 .meet-foounder__img {
     border-radius: 16px;
+}
+
+.our-partners {
+    margin-bottom: 40px;
 }
 
 .our-partners__heading {
