--- a/css/media.css
+++ b/css/media.css
@@ -81,6 +81,14 @@
     background-image: url(../img/hero__background-1520.png);
   }
 
+  .articles__item {
+    width: calc((93% - (var(--gap) * 1)) / 3);
+  }
+
+  .articles__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
 }
 
 
@@ -237,6 +245,14 @@
     background-image: url(../img/hero__background-1110.png);
   }
 
+  .articles__item {
+    width: calc((93% - (var(--gap) * 1)) / 2);
+  }
+
+  .articles__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+}
+
 }
 
 @media (max-width: 991px) {
@@ -350,7 +366,11 @@
     margin-right: 22px;
   }
 
-  .our-partners  {
+  .meet-foounder__img {
+    margin-top: 60px;
+  }
+
+  .our-partners {
     margin-bottom: 0;
   }
 
@@ -364,7 +384,13 @@
     width: 40%;
   }
 
+  .articles__item {
+    width: calc((93% - (var(--gap) * 1)) / 1);
+  }
 
+  .articles__item:not(:nth-child(1n)) {
+    margin-right: 30px;
+}
 
 }
 
