--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ textarea, select {
     --cerulean: #02ADF2;
     --black-pearl: #040B1F;
     --blue-ribbon: #016FFF;
+    --gap: 30px;
 }
 
 /* .container {
@@ -728,7 +729,7 @@ textarea, select {
     margin-bottom: 15px;
 }
 
-.meet-founder_bold {
+.text_bold {
     font-family: 'PTRootUIWebBold', 'PT Root UI', sans-serif;
     font-weight: 700;
 }
@@ -761,4 +762,72 @@ textarea, select {
 
 .join-us__subtitle {
     margin-bottom: 60px;
+}
+
+
+/* content corner */
+
+.content-corner__descr {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.articles__item {
+    width: calc((90% - (var(--gap) * 1)) / 4);
+    margin-bottom: 30px;
+}
+
+.articles__item:not(:nth-child(4n)) {
+    margin-right: 30px;
+}
+
+.blog__preview {
+    overflow: hidden;
+    height: 100%;
+    border: 1px solid #E4E4E4;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-preview__link {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    transition: background-color 0.3s ease-in-out;
+    height: 100%;
+}
+
+.blog-preview__img {
+    object-fit: cover;
+}
+
+.blog-preview__text {
+    padding: 30px;
+    flex-grow: 1;
+}
+
+.blog-preview__title {
+    margin-top: 20px;
+}
+
+.blog-preview__descr {
+    margin-bottom: 20px;
+}
+
+.blog-preview__author {
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+}
+
+.blog-preview__photo {
+    margin-right: 20px;
+    max-width: 15%;
+    border-radius: 100%;
+}
+
+.blog-preview__name {
+    margin-bottom: 0;
 }
