--- a/css/media.css
+++ b/css/media.css
@@ -85,6 +85,10 @@
     width: calc((93% - (var(--gap) * 1)) / 3);
   }
 
+  .articles__item:not(:nth-child(4n)) {
+    margin-right: 0px;
+}
+
   .articles__item:not(:nth-child(3n)) {
     margin-right: 30px;
 }
@@ -249,6 +253,10 @@
     width: calc((93% - (var(--gap) * 1)) / 2);
   }
 
+  .articles__item:not(:nth-child(3n)) {
+    margin-right: 0px;
+}
+
   .articles__item:not(:nth-child(2n)) {
     margin-right: 30px;
 }
@@ -388,8 +396,8 @@
     width: calc((93% - (var(--gap) * 1)) / 1);
   }
 
-  .articles__item:not(:nth-child(1n)) {
-    margin-right: 30px;
+  .articles__item:not(:nth-child(2n)) {
+    margin-right: 0;
 }
 
 }
