--- a/css/style.css
+++ b/css/style.css
@@ -717,6 +717,9 @@ textarea, select {
 
 }
 
+.address__link {
+    cursor: pointer;
+}
 
 .address__link:not(:last-child) {
     margin-bottom: 15px;
@@ -958,4 +961,86 @@ textarea, select {
 
 .archive__link:active {
     color: var(--blue-ribbon);
+}
+
+/* educational portal */
+
+.educational-portal__descr {
+    margin-bottom: 15px;
+}
+
+.educational-portal__link {
+    display: inline-block;
+    margin-top: 50px;
+}
+
+.educational-item:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.educational-wrapper {
+    padding-top: 215px;
+    border-radius: 5px;
+    background-image: url("../img/educational-bg-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.educational-text__wrapper {
+    flex-direction: column;
+    padding: 30px;
+    height: 207px;
+    justify-content: space-between;
+    background-color: rgba(1, 34, 69, .6);
+
+}
+
+.educational-type__link {
+    margin-bottom: 20px;
+    color: var(--azure-radiance);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    outline: none;
+    text-transform: uppercase;
+    outline: none;
+    transition: border-bottom 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.educational-type__link:focus-visible {
+    color: var(--blue-ribbon);
+}
+
+.educational-type__link:active {
+    color: var(--blue-ribbon);
+}
+
+.educational__link {
+    outline: none;
+        transition: border-bottom 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.educational__link:focus-visible {
+    color: var(--blue-ribbon);
+}
+
+.educational__link:active {
+    color: var(--blue-ribbon);
+}
+
+.educational__heading {
+    width: fit-content;
+    color: var(--white-color);
+}
+
+.educational__price {
+    color: var(--white-color);
+}
+
+/* data privacy  */
+
+.data-privacy__descr {
+    margin-bottom: 15px;
 }
